Revision history for Datify.

{{$NEXT}}

 - Use LooksLike::numeric where it makes sense.

v0.20.045 2020-02-14

 - Moved %SETTINGS into a state variable, and created an accessor.
 - Datify::Path is now a subclass of Datify.
 - Several internal and testing changes.

v0.19.045 2019-02-14

 - Datify:
   - Lots of changes to the internals:
     - Changed how add_handler() and _find_handler() work,
       by subtracting some magic, or adding it, respectively.
     - Changed calls to ref() to Scalar::Util::blessed()
       or Scalar::Util::reftype(), as appropriate.
     - Update new(), get(), and set() to operate on local parameters
       before global ones.
     - Converted several "if ... elsif ... else ..." blocks to
       the equivalent trinary "? ... : ... ? : ..." statements.
     - Methods should now localize $_, or operate on the global $_ if no
       parameters are passed in.
     - Improved the caching.
     - Improved how codeify() works, by referring to a named subroutine,
       if that can be determined.
   - numify() returns the string for undef, if that's what is passed in,
     rather than the undef value.
   - listify() no longer makes assumptions if passed a single ARRAY or HASH.
   - Added is_keyword() method.
   - Added more tests.
   - Updated the documentation.
   - Updated tests from Test::More to Test2::V0.
   - And Many more changes...
 - Datify::Path:
   - Lots of changes to the internals:
     - Changed calls to ref() to Scalar::Util::blessed()
       or Scalar::Util::reftype(), as appropriate.
     - Update new(), get(), and set() to operate on local parameters
       before global ones.
     - Converted several "if ... elsif ... else ..." blocks to
       the equivalent trinary "? ... : ... ? : ..." statements.
     - Methods should now localize $_, or operate on the global $_ if no
       parameters are passed in.
     - Improved the caching.
   - Detect and die on recursive structures.
   - Added more tests.