@@ -2,6 +2,7 @@ Revision history for Datify.
 
 {{$NEXT}}
 
+ - Added a test for keysort.
  - Use LooksLike::numeric where it makes sense.
 
 v0.20.045 2020-02-14
